--- a/MAUICalc/MAUICalc.csproj
+++ b/MAUICalc/MAUICalc.csproj
@@ -50,11 +50,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="MVVW\Models\" />
-	  <Folder Include="MVVW\ViewModels\" />
+		<PackageReference Include="PropertyChanged.Fody" Version="4.1.0" />
 	</ItemGroup>
 
 	<ItemGroup>
